infra/k8s/adidas-django-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adidas-django-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adidas-django-auth
  template:
    metadata:
      labels:
        app: adidas-django-auth
    spec:
      containers:
        - name: adidas-django-auth
          image: us.gcr.io/adidas-test-344408/adidas_django_auth
          command: ['/bin/bash', 'run.sh'] # runs migrations and starts the server
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: adidas-django-auth-srv
spec:
  selector:
    app: adidas-django-auth
  ports:
    - name: adidas-django-auth
      protocol: TCP
      port: 4003
      targetPort: 8000
