infra/k8s/adidas-express-public-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adidas-express-public-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adidas-express-public
  template:
    metadata:
      labels:
        app: adidas-express-public
    spec:
      containers:
        - name: adidas-express-public
          image: us.gcr.io/sixth-loader-344609/adidas_express_public
---
apiVersion: v1
kind: Service
metadata:
  name: adidas-express-public-srv
spec:
  selector:
    app: adidas-express-public
  ports:
    - name: adidas-express-public
      protocol: TCP
      port: 4000
      targetPort: 8000
