infra/k8s/adidas-express-sub-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adidas-express-sub-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adidas-express-sub
  template:
    metadata:
      labels:
        app: adidas-express-sub
    spec:
      containers:
        - name: adidas-express-sub
          image: us.gcr.io/adidas-test-344408/adidas_express_sub
---
apiVersion: v1
kind: Service
metadata:
  name: adidas-express-sub-srv
spec:
  selector:
    app: adidas-express-sub
  ports:
    - name: adidas-express-sub
      protocol: TCP
      port: 4001
      targetPort: 8000
