infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: www.testadidas.io
      http:
        paths:
#          - path: /api/v1/(subscription)|(subscriptionSwagger)|(subscriptionAdmin)
          - path: /(subscription)|(swagger)|(admin)
            pathType: Prefix
            backend:
              service:
                name: adidas-express-sub-srv
                port:
                  number: 4001
#          - path: /api/v1/(email)|(emailSwagger)|(emailAdmin)
          - path: /(email)|(emailSwagger)|(emailAdmin)
            pathType: Prefix
            backend:
              service:
                name: adidas-express-email-srv
                port:
                  number: 4002
